Improve error messages and add not found check to delete